--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-
   },
   "repository": {
     "type": "git",
@@ -28,6 +27,8 @@
   "homepage": "https://github.com/MattGDwyer/portfolio-main#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "node": "^18.7.0"
+    "node": "^18.7.0",
+    "php": "^5.5.0",
+    "phpcgijs": "^1.0.0-beta7"
   }
 }
