--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
   "homepage": "https://github.com/MattGDwyer/portfolio-main#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "node": "^18.7.0",
-    "php": "^5.5.0",
-    "phpcgijs": "^1.0.0-beta7"
+    "node": "^18.7.0"
   }
 }
